FOF 3.3.1
================================================================================
# [HIGH] Scaffolding does not work on PHP 7.2 (see changelog for version 3.1.4 for related issue)
# [LOW] FEF-based components have the wrong padding in the backend due to extra classes being added to the container

FOF 3.3.0
================================================================================
+ JHtml helpers for browse and edit views to help us convert from XML forms to FEF
+ BrowseView helper to help us convert from XML forms to FEF
+ Blade: `@sortgrid($field [, $langKey])` implements Joomla sortable titles for browse view table headers
+ Blade: `@fieldtitle($field)` returns the translated COM_YourComponent_YourView_FIELD_YourField string
+ SelectOptions helper for getting JHtml option arrays for Joomla core information, such as access levels
+ Additional options for the FEF renderer
# [MEDIUM] DataModel constructor forcibly applies access level filtering when the model is doing asset tracking

FOF 3.2.1
================================================================================
# [HIGH] DataModel::count() causes a SQL error on MySQL 5.7+ with ONLY_FULL_GROUP_BY SQL mode enabled

FOF 3.2.0
================================================================================
+ Component version helper
+ Akeeba FEF renderer (to be used by Akeeba components in 2018)
# [HIGH] The defaultView option in fof.xml was being ignored

FOF 3.1.4
================================================================================
! PHP 7.2 compatibility: replace "numeric" field with "number". You have to do this change in your forms manually.
+ Select helper for use with Akeeba Frontend Framework (currently internal to Akeeba Ltd)
~ Deprecated DataModel::blacklistFilters for getting the filter list. Use getBlacklistFilters instead.