@@ -1,5 +1,6 @@
 FOF 3.3.1
 ================================================================================
++ Support for precompiled Blade templates for broken hosts without PHP Tokenizer support.
 # [HIGH] Scaffolding does not work on PHP 7.2 (see changelog for version 3.1.4 for related issue)
 # [LOW] FEF-based components have the wrong padding in the backend due to extra classes being added to the container
 
